# mytt-scraper

./: .gitignore  .sesskey  AGENTS.md  PROJECT.md  README.md  anchor-context.md  pyproject.toml  requirements.txt  setup.sh  zensical.toml
.github/workflows/: docs.yml
.tf/ralph/: progress.md
.tickets/: ms-0824.md  ms-08nr.md  ms-24my.md  ms-24n1.md  ms-28lt.md  ms-44ps.md  ms-6kxp.md  ms-861m.md  ms-a51k.md  ms-ay95.md  ms-b2hw.md  ms-b7cc.md  ms-btdf.md  ms-cz3f.md  ms-dxg2.md  ms-ekpx.md  ms-f9r5.md  ms-fbpk.md  ms-fkf4.md  ms-fp62.md  ms-ftgp.md  ms-hhlj.md  ms-ij43.md  ms-inxx.md  ms-j04u.md  ms-j0ge.md  ms-l9h9.md  ms-lk6f.md  ms-lxid.md  ms-mvjw.md  ms-n639.md  ms-nhyr.md  ms-qm00.md  ms-rhk9.md  ms-rprw.md  ms-t1zx.md  ms-t6ic.md  ms-u51m.md  ms-u70y.md  ms-vcim.md  (+4 more)
data/processed/: ttr_data.json
docs/: contributing.md  index.md
docs/explanation/: architecture.md  in-memory-vs-disk-tables.md  index.md  search-feature.md
docs/how-to/: contribute-docs.md  fetch-external-profile.md  index.md  search-guide.md  search-players.md  tui-table-queries.md  tui-table-viewer.md
docs/reference/: cli.md  index.md  python-api.md
examples/: analyze_tables.py  create_tables.py  extract_ttr.py
scripts/: debug_extract.py  debug_login.py  diagnose_search.py  example_fetch_multiple.py  example_search.py  main.py  test_login.py  test_scraper.py  test_search_api.py  test_tui_search.py
tables/: README.md
tests/: __init__.py  test_auth_routes.py  test_in_memory_tables.py  test_query_executor.py  test_query_model.py  test_scraper.py  test_session.py
(+193 files in other folders)
